fixed cat memes not showing in some tags

--- a/pages/twitterClone/index.css
+++ b/pages/twitterClone/index.css
@@ -11,7 +11,9 @@ h1{
     margin-bottom: 10px;
     font-size: 20px;
 }
-
+.fa-solid , .fa-regular{
+    color:#555;
+}
 i{
     font-size: 15px;
     cursor: pointer;
@@ -50,6 +52,7 @@ textarea{
     margin: 0 0 20px 0;
     height: 60px;
     width: 100%;
+    resize: none;
     font-size: 20px;
     line-height: 30px;
 }
